--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ crashlytics-build.properties
 
 # Mac Finder information
 *.DS_Store
+Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/projectSettingsUpdater.xml
+Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/workspace.xml
