--- a/.gitignore
+++ b/.gitignore
@@ -63,3 +63,5 @@ crashlytics-build.properties
 *.DS_Store
 Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/projectSettingsUpdater.xml
 Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/workspace.xml
+Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/indexLayout.xml
+Dating_Simulator/.idea/.idea.Dating_Simulator/.idea/vcs.xml
